--- a/index.html
+++ b/index.html
@@ -94,23 +94,127 @@
             >
           </li>
         </ul>
+      </nav>
+    </div>
+
+    <header class="header">
+      <div class="wrapper">
+        <h1 class="header__title">Отчёт о проделанной работе</h1>
       </div>
-    </nav>
+    </header>
 
-    <h1>Отчёт о проделанной работе</h1>
+    <main class="main">
+      <div class="wrapper">
+        <p class="main__child-list-title">Составо нашей команды:</p>
+      </div>
+      <!--  -->
+      <section class="section">
+        <div class="section-conteiner">
+          <div class="wrapper-2">
+            <div class="section__child-card">
+              <img
+                src="./assets/faces/f1.png"
+                alt=""
+                class="section__child-card-photo"
+              />
+              <p class="section__child-name">Лера</p>
+            </div>
 
-    <p>Составо нашей команды:</p>
-    <ol>
-      <li>Артём</li>
-      <li>Артём</li>
-      <li>Даня</li>
-      <li>Лера</li>
-      <li>Даша</li>
-      <li>Максим</li>
-      <li>Максим</li>
-      <li>Паша</li>
-      <li>Тарас</li>
-      <li>Юра</li>
-    </ol>
+            <!--  -->
+
+            <div class="section__child-card">
+              <p class="section__child-name">Даша</p>
+              <img
+                src="./assets/faces/f2.png"
+                alt=""
+                class="section__child-card-photo"
+              />
+            </div>
+
+            <!--  -->
+
+            <div class="section__child-card">
+              <img
+                src="./assets/faces/f3.png"
+                alt=""
+                class="section__child-card-photo"
+              />
+              <p class="section__child-name">Максим</p>
+            </div>
+
+            <!--  -->
+
+            <div class="section__child-card">
+              <p class="section__child-name">Даня</p>
+              <img
+                src="./assets/faces/f4.png"
+                alt=""
+                class="section__child-card-photo"
+              />
+            </div>
+
+            <!--  -->
+
+            <div class="section__child-card">
+              <img
+                src="./assets/faces/f5.png"
+                alt=""
+                class="section__child-card-photo"
+              />
+              <p class="section__child-name">Артём</p>
+            </div>
+
+            <!--  -->
+
+            <div class="section__child-card">
+              <p class="section__child-name">Паша</p>
+              <img
+                src="./assets/faces/f6.png"
+                alt=""
+                class="section__child-card-photo"
+              />
+            </div>
+
+            <!--  -->
+
+            <div class="section__child-card">
+              <img
+                src="./assets/faces/f7.png"
+                alt=""
+                class="section__child-card-photo"
+              />
+              <p class="section__child-name">Максим</p>
+            </div>
+
+            <!--  -->
+
+            <div class="section__child-card">
+              <p class="section__child-name">Юра</p>
+              <img
+                src="./assets/faces/f8.png"
+                alt=""
+                class="section__child-card-photo"
+              />
+            </div>
+
+            <!--  -->
+
+            <div class="section__child-card">
+              <img
+                src="./assets/faces/f9.png"
+                alt=""
+                class="section__child-card-photo"
+              />
+              <p class="section__child-name">Тарас</p>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section>
+        
+      </section>
+
+    </main>
   </body>
 </html>
