fix tags error's

--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
             >
           </li>
         </ul>
-      </nav>
-    </div>
+      </div>
+    </nav>
 
     <header class="header">
       <div class="wrapper">
@@ -211,10 +211,7 @@
         </div>
       </section>
 
-      <section>
-        
-      </section>
-
+      <section></section>
     </main>
   </body>
 </html>
