--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
     <main class="main">
       <div class="wrapper">
-        <p class="main__child-list-title">Составо нашей команды:</p>
+        <p class="main__title">Составо нашей команды:</p>
       </div>
       <!--  -->
       <section class="section">
@@ -211,7 +211,11 @@
         </div>
       </section>
 
-      <section></section>
+      <section>
+        <div class="wrapper">
+          <p class="main__title">Чему мы научились?</p>
+        </div>
+      </section>
     </main>
   </body>
 </html>
