--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Квант-Лагерь (Осень 2023)</title>
     <link rel="stylesheet" href="style.css" />
+    <link
+      rel="shortcut icon"
+      href="./assets/kvant-logo.jpg.png"
+      type="image/x-icon"
+    />
   </head>
   <body>
     <nav class="nav">
