add block with lesson

--- a/index.html
+++ b/index.html
@@ -109,116 +109,167 @@
     </header>
 
     <main class="main">
-      <div class="wrapper">
-        <p class="main__title">Составо нашей команды:</p>
-      </div>
       <!--  -->
       <section class="section">
         <div class="section-conteiner">
-          <div class="wrapper-2">
-            <div class="section__child-card">
-              <img
-                src="./assets/faces/f1.png"
-                alt=""
-                class="section__child-card-photo"
-              />
-              <p class="section__child-name">Лера</p>
-            </div>
+          <div class="section-left">
+            <div class="wrapper-2">
+              <p class="main__title">Состав нашей команды:</p>
+              <div class="section__child-card">
+                <img
+                  src="./assets/faces/f1.png"
+                  alt=""
+                  class="section__child-card-photo"
+                />
+                <p class="section__child-name">Лера</p>
+              </div>
 
-            <!--  -->
+              <!--  -->
 
-            <div class="section__child-card">
-              <p class="section__child-name">Даша</p>
-              <img
-                src="./assets/faces/f2.png"
-                alt=""
-                class="section__child-card-photo"
-              />
-            </div>
+              <div class="section__child-card">
+                <p class="section__child-name">Даша</p>
+                <img
+                  src="./assets/faces/f2.png"
+                  alt=""
+                  class="section__child-card-photo"
+                />
+              </div>
 
-            <!--  -->
+              <!--  -->
 
-            <div class="section__child-card">
-              <img
-                src="./assets/faces/f3.png"
-                alt=""
-                class="section__child-card-photo"
-              />
-              <p class="section__child-name">Максим</p>
-            </div>
+              <div class="section__child-card">
+                <img
+                  src="./assets/faces/f3.png"
+                  alt=""
+                  class="section__child-card-photo"
+                />
+                <p class="section__child-name">Максим</p>
+              </div>
 
-            <!--  -->
+              <!--  -->
 
-            <div class="section__child-card">
-              <p class="section__child-name">Даня</p>
-              <img
-                src="./assets/faces/f4.png"
-                alt=""
-                class="section__child-card-photo"
-              />
-            </div>
+              <div class="section__child-card">
+                <p class="section__child-name">Даня</p>
+                <img
+                  src="./assets/faces/f4.png"
+                  alt=""
+                  class="section__child-card-photo"
+                />
+              </div>
 
-            <!--  -->
+              <!--  -->
 
-            <div class="section__child-card">
-              <img
-                src="./assets/faces/f5.png"
-                alt=""
-                class="section__child-card-photo"
-              />
-              <p class="section__child-name">Артём</p>
-            </div>
+              <div class="section__child-card">
+                <img
+                  src="./assets/faces/f5.png"
+                  alt=""
+                  class="section__child-card-photo"
+                />
+                <p class="section__child-name">Артём</p>
+              </div>
 
-            <!--  -->
+              <!--  -->
 
-            <div class="section__child-card">
-              <p class="section__child-name">Паша</p>
-              <img
-                src="./assets/faces/f6.png"
-                alt=""
-                class="section__child-card-photo"
-              />
-            </div>
+              <div class="section__child-card">
+                <p class="section__child-name">Паша</p>
+                <img
+                  src="./assets/faces/f6.png"
+                  alt=""
+                  class="section__child-card-photo"
+                />
+              </div>
 
-            <!--  -->
+              <!--  -->
 
-            <div class="section__child-card">
-              <img
-                src="./assets/faces/f7.png"
-                alt=""
-                class="section__child-card-photo"
-              />
-              <p class="section__child-name">Максим</p>
-            </div>
+              <div class="section__child-card">
+                <img
+                  src="./assets/faces/f7.png"
+                  alt=""
+                  class="section__child-card-photo"
+                />
+                <p class="section__child-name">Максим</p>
+              </div>
 
-            <!--  -->
+              <!--  -->
 
-            <div class="section__child-card">
-              <p class="section__child-name">Юра</p>
-              <img
-                src="./assets/faces/f8.png"
-                alt=""
-                class="section__child-card-photo"
-              />
-            </div>
+              <div class="section__child-card">
+                <p class="section__child-name">Юра</p>
+                <img
+                  src="./assets/faces/f8.png"
+                  alt=""
+                  class="section__child-card-photo"
+                />
+              </div>
 
-            <!--  -->
+              <!--  -->
 
-            <div class="section__child-card">
-              <img
-                src="./assets/faces/f9.png"
-                alt=""
-                class="section__child-card-photo"
-              />
-              <p class="section__child-name">Тарас</p>
+              <div class="section__child-card">
+                <img
+                  src="./assets/faces/f9.png"
+                  alt=""
+                  class="section__child-card-photo"
+                />
+                <p class="section__child-name">Тарас</p>
+              </div>
             </div>
           </div>
-        </div>
-      </section>
-
-      <section>
-        <div class="wrapper">
-          <p class="main__title">Чему мы научились?</p>
+          <div class="section-right">
+            <div class="wrapper-3">
+              <p class="main__title">Чему мы научились?</p>
+            </div>
+            <p class="section-right__title">Работали над сайтом:</p>
+            <div class="section-right__line-1">
+              <img
+                src="./assets/web-lessons/photo_10_2023-10-12_18-29-15.jpg"
+                alt=""
+                class="section-right__web-photo"
+              />
+              <img
+                src="./assets/web-lessons/photo_11_2023-10-12_18-29-15.jpg"
+                alt=""
+                class="section-right__web-photo"
+              />
+              <img
+                src="./assets/web-lessons/photo_1_2023-10-12_18-29-15.jpg"
+                alt=""
+                class="section-right__web-photo"
+              />
+            </div>
+            <div class="section-right__line-1">
+              <img
+                src="./assets/web-lessons/photo_2_2023-10-12_18-29-15.jpg"
+                alt=""
+                class="section-right__web-photo"
+              />
+              <img
+                src="./assets/web-lessons/photo_4_2023-10-12_18-29-15.jpg"
+                alt=""
+                class="section-right__web-photo"
+              />
+              <img
+                src="./assets/web-lessons/photo_8_2023-10-12_18-29-15.jpg"
+                alt=""
+                class="section-right__web-photo"
+              />
+            </div>
+            <div class="section-right__line-1">
+              <img
+                src="./assets/web-lessons/photo_5_2023-10-12_18-29-15.jpg"
+                alt=""
+                class="section-right__web-photo"
+              />
+              <img
+                src="./assets/web-lessons/photo_6_2023-10-12_18-29-15.jpg"
+                alt=""
+                class="section-right__web-photo"
+              />
+              <img
+                src="./assets/web-lessons/photo_7_2023-10-12_18-29-15.jpg"
+                alt=""
+                class="section-right__web-photo"
+              />
+            </div>
+          </div>
         </div>
       </section>
     </main>
