--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 
     <header class="header">
       <div class="wrapper">
-        <h1 class="header__title">Отчёт о проделанной работе</h1>
+        <h1 class="header__title">Лагерь "Осение каникулы"</h1>
       </div>
     </header>
 
@@ -265,6 +265,165 @@
               />
               <img
                 src="./assets/web-lessons/photo_7_2023-10-12_18-29-15.jpg"
+                alt=""
+                class="section-right__web-photo"
+              />
+            </div>
+            <!--  -->
+            <p class="section-right__title">Занимались дизайном и графикой:</p>
+            <div class="section-right__line-1">
+              <img
+                src="./assets/design-lessons/photo_1_2023-10-12_19-19-06.jpg"
+                alt=""
+                class="section-right__web-photo"
+              />
+              <img
+                src="./assets/design-lessons/photo_2_2023-10-12_19-19-06.jpg"
+                alt=""
+                class="section-right__web-photo"
+              />
+              <img
+                src="./assets/design-lessons/photo_3_2023-10-12_19-19-06.jpg"
+                alt=""
+                class="section-right__web-photo"
+              />
+            </div>
+            <div class="section-right__line-1">
+              <img
+                src="./assets/design-lessons/photo_5_2023-10-12_19-19-06.jpg"
+                alt=""
+                class="section-right__web-photo"
+              />
+              <img
+                src="./assets/design-lessons/photo_8_2023-10-12_19-19-06.jpg"
+                alt=""
+                class="section-right__web-photo"
+              />
+              <img
+                src="./assets/design-lessons/photo_9_2023-10-12_19-19-06.jpg"
+                alt=""
+                class="section-right__web-photo"
+              />
+            </div>
+            <div class="section-right__line-1">
+              <img
+                src="./assets/design-lessons/photo_10_2023-10-12_19-19-06.jpg"
+                alt=""
+                class="section-right__web-photo"
+              />
+              <img
+                src="./assets/design-lessons/photo_11_2023-10-12_19-19-06.jpg"
+                alt=""
+                class="section-right__web-photo"
+              />
+              <img
+                src="./assets/design-lessons/photo_12_2023-10-12_19-19-07.jpg"
+                alt=""
+                class="section-right__web-photo"
+              />
+            </div>
+            <!--  -->
+            <p class="section-right__title">Ставили эксперименты:</p>
+            <div class="section-right__line-1">
+              <img
+                src="./assets/since-lesson/photo_1_2023-10-12_19-32-10.jpg"
+                alt=""
+                class="section-right__web-photo"
+              />
+              <img
+                src="./assets/since-lesson/photo_3_2023-10-12_19-32-10.jpg"
+                alt=""
+                class="section-right__web-photo"
+              />
+              <img
+                src="./assets/since-lesson/photo_5_2023-10-12_19-32-10.jpg"
+                alt=""
+                class="section-right__web-photo"
+              />
+            </div>
+            <div class="section-right__line-1">
+              <img
+                src="./assets/since-lesson/photo_6_2023-10-12_19-32-10.jpg"
+                alt=""
+                class="section-right__web-photo"
+              />
+              <img
+                src="./assets/since-lesson/photo_7_2023-10-12_19-32-10.jpg"
+                alt=""
+                class="section-right__web-photo"
+              />
+              <img
+                src="./assets/since-lesson/photo_8_2023-10-12_19-32-10.jpg"
+                alt=""
+                class="section-right__web-photo"
+              />
+            </div>
+            <div class="section-right__line-1">
+              <img
+                src="./assets/since-lesson/photo_10_2023-10-12_19-32-10.jpg"
+                alt=""
+                class="section-right__web-photo"
+              />
+              <img
+                src="./assets/since-lesson/photo_12_2023-10-12_19-32-10.jpg"
+                alt=""
+                class="section-right__web-photo"
+              />
+              <img
+                src="./assets/since-lesson/photo_13_2023-10-12_19-32-10.jpg"
+                alt=""
+                class="section-right__web-photo"
+              />
+            </div>
+            <!--  -->
+            <p class="section-right__title">Изучали интересную математику:</p>
+            <div class="section-right__line-1">
+              <img
+                src="./assets/math-lessons/photo_1_2023-10-12_19-48-51.jpg"
+                alt=""
+                class="section-right__web-photo"
+              />
+              <img
+                src="./assets/math-lessons/photo_2_2023-10-12_19-48-51.jpg"
+                alt=""
+                class="section-right__web-photo"
+              />
+              <img
+                src="./assets/math-lessons/photo_3_2023-10-12_19-48-51.jpg"
+                alt=""
+                class="section-right__web-photo"
+              />
+            </div>
+            <div class="section-right__line-1">
+              <img
+                src="./assets/math-lessons/photo_4_2023-10-12_19-48-51.jpg"
+                alt=""
+                class="section-right__web-photo"
+              />
+              <img
+                src="./assets/math-lessons/photo_5_2023-10-12_19-48-51.jpg"
+                alt=""
+                class="section-right__web-photo"
+              />
+              <img
+                src="./assets/math-lessons/photo_6_2023-10-12_19-48-51.jpg"
+                alt=""
+                class="section-right__web-photo"
+              />
+            </div>
+            <div class="section-right__line-1">
+              <img
+                src="./assets/math-lessons/photo_7_2023-10-12_19-48-51.jpg"
+                alt=""
+                class="section-right__web-photo"
+              />
+              <img
+                src="./assets/math-lessons/photo_8_2023-10-12_19-48-51.jpg"
+                alt=""
+                class="section-right__web-photo"
+              />
+              <img
+                src="./assets/math-lessons/photo_9_2023-10-12_19-48-51.jpg"
                 alt=""
                 class="section-right__web-photo"
               />
