--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@
           <li>
             <a href="#" target="_blank" class="nav__list-el">Сайт Даши</a>
           </li>
+        </ul>
+        <ul class="nav__list">
           <li>
             <a
               href="./other-web-pages/Max/index.html"
@@ -431,7 +433,20 @@
           </div>
         </div>
       </section>
+
+      <div class="wrapper-4">
+        <h1 class="warpper-4__title">Снимали и монтировали видео:</h1>
+        <div class="wrapper-4__video-section">
+          <img src="./assets/video-edit-lessons/photo_1_2023-10-13_10-31-41.jpg" alt="" class="video-section__photo">
+          <img src="./assets/video-edit-lessons/photo_2_2023-10-13_10-31-41.jpg" alt="" class="video-section__photo">
+          <img src="./assets/video-edit-lessons/photo_3_2023-10-13_10-31-41.jpg" alt="" class="video-section__photo">
+        </div>
+        <h1 class="warpper-4__title">И вот что у нас получилось:</h1>
+
+      </div>
+
     </main>
+
     <footer></footer>
   </body>
 </html>
