end-edit-wep-page

--- a/index.html
+++ b/index.html
@@ -437,14 +437,35 @@
       <div class="wrapper-4">
         <h1 class="warpper-4__title">Снимали и монтировали видео:</h1>
         <div class="wrapper-4__video-section">
-          <img src="./assets/video-edit-lessons/photo_1_2023-10-13_10-31-41.jpg" alt="" class="video-section__photo">
-          <img src="./assets/video-edit-lessons/photo_2_2023-10-13_10-31-41.jpg" alt="" class="video-section__photo">
-          <img src="./assets/video-edit-lessons/photo_3_2023-10-13_10-31-41.jpg" alt="" class="video-section__photo">
+          <img
+            src="./assets/video-edit-lessons/photo_1_2023-10-13_10-31-41.jpg"
+            alt=""
+            class="video-section__photo"
+          />
+          <img
+            src="./assets/video-edit-lessons/photo_2_2023-10-13_10-31-41.jpg"
+            alt=""
+            class="video-section__photo"
+          />
+          <img
+            src="./assets/video-edit-lessons/photo_3_2023-10-13_10-31-41.jpg"
+            alt=""
+            class="video-section__photo"
+          />
         </div>
         <h1 class="warpper-4__title">И вот что у нас получилось:</h1>
-
+        <div class="video-conteiner">
+          <iframe
+            width="1280"
+            height="720"
+            src="https://www.youtube.com/embed/F8MN0o6RS9o?si=9xMjS6HaxIqPTWmb"
+            title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            allowfullscreen
+          ></iframe>
+        </div>
       </div>
-
     </main>
 
     <footer></footer>
