--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             >
           </li>
           <li>
-            <a href="#" target="_blank" class="nav__list-el">Сайт Даши</a>
+            <a href="./other-web-pages/Dasha/index.html" target="_blank" class="nav__list-el">Сайт Даши</a>
           </li>
         </ul>
         <ul class="nav__list">
@@ -461,6 +461,7 @@
             src="https://www.youtube.com/embed/F8MN0o6RS9o?si=9xMjS6HaxIqPTWmb"
             title="YouTube video player"
             frameborder="0"
+
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
             allowfullscreen
           ></iframe>
