--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
               href="./other-web-pages/Artem BMX/index.html"
               target="_blank"
               class="nav__list-el"
-              >Сайт Артёма</a
+              >Сайт Артёма З.</a
             >
           </li>
           <li>
@@ -36,7 +36,7 @@
               href="./other-web-pages/Artem/index.html"
               target="_blank"
               class="nav__list-el"
-              >Сайт Артёма</a
+              >Сайт Артёма М.</a
             >
           </li>
           <li>
@@ -65,7 +65,7 @@
               href="./other-web-pages/Max/index.html"
               target="_blank"
               class="nav__list-el"
-              >Сайт Максима</a
+              >Сайт Максима Ш.</a
             >
           </li>
           <li>
@@ -73,7 +73,7 @@
               href="./other-web-pages/Maxim/index.html"
               target="_blank"
               class="nav__list-el"
-              >Сайт Максима</a
+              >Сайт Максима С.</a
             >
           </li>
           <li>
