--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 
     <header class="header">
       <div class="wrapper">
-        <h1 class="header__title">Лагерь "Осение каникулы"</h1>
+        <h1 class="header__title">Лагерь "Осенние каникулы"</h1>
       </div>
     </header>
 
