--- a/index.html
+++ b/index.html
@@ -56,7 +56,12 @@
             >
           </li>
           <li>
-            <a href="./other-web-pages/Dasha/index.html" target="_blank" class="nav__list-el">Сайт Даши</a>
+            <a
+              href="./other-web-pages/Dasha/index.html"
+              target="_blank"
+              class="nav__list-el"
+              >Сайт Даши</a
+            >
           </li>
         </ul>
         <ul class="nav__list">
@@ -106,7 +111,7 @@
 
     <header class="header">
       <div class="wrapper">
-        <h1 class="header__title">Лагерь "Осенние каникулы"</h1>
+        <h1 class="header__title">Лагерь "Осение каникулы"</h1>
       </div>
     </header>
 
@@ -212,6 +217,15 @@
                   class="section__child-card-photo"
                 />
                 <p class="section__child-name">Тарас</p>
+              </div>
+
+              <div class="section__child-card">
+                <p class="section__child-name">Юра</p>
+                <img
+                  src="./assets/faces/f10.png"
+                  alt=""
+                  class="section__child-card-photo"
+                />
               </div>
             </div>
           </div>
@@ -453,7 +467,7 @@
             class="video-section__photo"
           />
         </div>
-        <h1 class="warpper-4__title">И вот что у нас получилось:</h1>
+        <!-- <h1 class="warpper-4__title">И вот что у нас получилось:</h1>
         <div class="video-conteiner">
           <iframe
             width="1280"
@@ -461,10 +475,9 @@
             src="https://www.youtube.com/embed/F8MN0o6RS9o?si=9xMjS6HaxIqPTWmb"
             title="YouTube video player"
             frameborder="0"
-
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
             allowfullscreen
-          ></iframe>
+          ></iframe> -->
         </div>
       </div>
     </main>
