--- a/other-web-pages/Dasha/index.html
+++ b/other-web-pages/Dasha/index.html
@@ -38,6 +38,9 @@
       ><p>Тыкните на этот текст, чтобы перейти на сайт про салюты.</p></a
     >
 
+    <p>Это мой мудборд</p>
+    <img src="Мудборд комнаты (Даша).jpg" alt="" class="moodbord"/>
+
     <hr />
   </body>
 </html>
