--- a/other-web-pages/Lera/Сайт-2/index.html
+++ b/other-web-pages/Lera/Сайт-2/index.html
@@ -30,10 +30,14 @@
 
     <!-- Картинка на сайте -->
     <img src="123.gif" alt="" />
+    
 
     <hr />
 
     <a href="https://cat-power.ru/?ysclid=lnmv2w4zrw514728838"><p>Тыкните на этот текст, чтобы перейти на сайт про кошек.</p></a>
+    
+    <p>Это мой мудборд</p>
+    <img src="Мудборд дизайн игровой (Лера).jpg" alt="" class="moodbord"/>
 
     <hr />
   </body>
