--- a/other-web-pages/Taras/index.html
+++ b/other-web-pages/Taras/index.html
@@ -34,7 +34,10 @@
 
     <hr />
 
-    <a href="#"><p>Тыкните на этот текст, чтобы перейти на сайт про ___.</p></a>
+    <a href="#"><p>Тыкните на этот текст, чтобы перейти на сайт про меня.</p></a>
+
+    <p>Это мой мудборд</p>
+    <img src="Мудборд дизайн квартиры (Тарас).jpg" alt="" class="moodbord"/>
 
     <hr />
   </body>
