--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
               </div>
 
               <div class="section__child-card">
-                <p class="section__child-name">Юра</p>
+                <p class="section__child-name">Артём</p>
                 <img
                   src="./assets/faces/f10.png"
                   alt=""
